refactor(auth): 重构认证模块代码提升类型安全性和性能
- 将传统类型转换替换为instanceof模式匹配提高代码可读性
- 使用String.formatted方法替代String.format提升字符串格式化性能
- 优化日志记录使用结构化参数避免字符串拼接开销
- 移除废弃的安全依赖减少项目体积
- 删除过长的深度分析报告文件简化项目结构
- 修复网关错误属性处理逻辑确保异常信息正确传递